--- a/index.html
+++ b/index.html
@@ -14,6 +14,24 @@
         <!-- start button  -->
         <button id="start">Start Game</button>
     </header>
+    <main>
+        <section id="word-board">
+            Words go here.
+        </section>
+        <aside id="scores-times">
+            <div id="scoreboard">
+                <div id="scores">
+                    <div>
+                        Wins: <span id="wins">2</span>
+                    </div>
+                    <div>
+                        Losses: <span id="losses">2</span>
+                    </div>
+                </div>
+                <button id="reset">Reset</button>
+            </div>
+        </aside>
+    </main>
 
 
 </body>
