adds time left html element, adds time left state and render function

--- a/index.html
+++ b/index.html
@@ -10,26 +10,21 @@
   <body>
     <header>
       <h1>Welcome to the game</h1>
+      <div id="time-left"></div>
       <!-- start button  -->
       <button id="start">Start Game</button>
     </header>
     <main>
-        <section id="word-board">
-            Words go here.
-        </section>
-        <aside id="scores-times">
-            <div id="scoreboard">
-                <div id="scores">
-                    <div>
-                        Wins: <span id="wins">2</span>
-                    </div>
-                    <div>
-                        Losses: <span id="losses">2</span>
-                    </div>
-                </div>
-                <button id="reset">Reset</button>
-            </div>
-        </aside>
+      <section id="word-board">Words go here.</section>
+      <aside id="scores-times">
+        <div id="scoreboard">
+          <div id="scores">
+            <div>Wins: <span id="wins">2</span></div>
+            <div>Losses: <span id="losses">2</span></div>
+          </div>
+          <button id="reset">Reset</button>
+        </div>
+      </aside>
     </main>
 
     <script src="./assets/js/script.js"></script>
