Added word-message display div

--- a/index.html
+++ b/index.html
@@ -1,21 +1,22 @@
 <!DOCTYPE html>
 <html lang="en">
-  <head>
+
+<head>
     <meta charset="UTF-8" />
     <meta http-equiv="X-UA-Compatible" content="IE=edge" />
     <meta name="viewport" content="width=device-width, initial-scale=1.0" />
     <title>Document</title>
-  </head>
+</head>
 
-  <body>
+<body>
     <header>
-      <h1>Welcome to the game</h1>
-      <!-- start button  -->
-      <button id="start">Start Game</button>
+        <h1>Welcome to the game</h1>
+        <!-- start button  -->
+        <button id="start">Start Game</button>
     </header>
     <main>
         <section id="word-board">
-            Words go here.
+            <h2 id="word-message">W_rd Gu_ss</h2>
         </section>
         <aside id="scores-times">
             <div id="scoreboard">
@@ -33,5 +34,6 @@
     </main>
 
     <script src="./assets/js/script.js"></script>
-  </body>
+</body>
+
 </html>
