Centered jumbotron text and moved button

--- a/index.html
+++ b/index.html
@@ -14,15 +14,16 @@
 
 <body>
     <div class="jumbotron jumbotron-fluid">
-        <div class="container">
+        <div class="container text-center">
             <h1 class="display-4">Welcome to the game</h1>
             <p class="lead">
                 This is a modified jumbotron that occupies the entire horizontal space of its parent.
             </p>
+            <button id="start" type="button" class="btn btn-primary">Start Game</button>
         </div>
     </div>
     <!-- start button  -->
-    <button id="start" type="button" class="btn btn-primary">Start Game</button>
+
     <main>
         <section id="word-board" class="card">
             <div id="word-message" class="card-body">W_rd Gu_ss</div>
