added placeholder for terminal output

--- a/index.html
+++ b/index.html
@@ -43,6 +43,7 @@
                 <h3 id="time-left"></h3>
                 <h2>seconds left</h2>
             </div>
+            <!-- terminal output here  -->
         </aside>
     </main>
 
